// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Input" renders 1`] = `
<div
  css={[Function]}
>
  <div
    className="input-group"
  >
    <div
      css={
        {
          "marginBottom": false,
          "position": "relative",
        }
      }
    >
      <input
        className="wireinput"
      />
    </div>
  </div>
</div>
`;

exports[`"Input" renders as disabled 1`] = `
<div
  css={[Function]}
>
  <div
    className="input-group"
  >
    <div
      css={
        {
          "marginBottom": false,
          "position": "relative",
        }
      }
    >
      <input
        className="wireinput"
        disabled={true}
      />
    </div>
  </div>
</div>
`;

exports[`"Input" renders as invalid 1`] = `
<div
  css={[Function]}
>
  <div
    className="input-group"
  >
    <div
      css={
        {
          "marginBottom": false,
          "position": "relative",
        }
      }
    >
      <input
        className="wireinput"
      />
    </div>
  </div>
</div>
`;

exports[`"Input" renders with placeholderTextTransform 1`] = `
<div
  css={[Function]}
>
  <div
    className="input-group"
  >
    <div
      css={
        {
          "marginBottom": false,
          "position": "relative",
        }
      }
    >
      <input
        className="wireinput"
        placeholder="Input"
      />
    </div>
  </div>
</div>
`;
